@@ -5,6 +5,9 @@
 
 2004-03-01  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/dyna-draw-context.cpp (sp_ddc_defaults):
+	Cleanup: Use table and loop instead of copy&paste.
+
 	* configure.in: If -Wno-unused-parameter isn't recognized (g++ 3.2 and
 	earlier) then use -Wno-unused.
 
